welcome.lessons.welcome.loopfor.LoopCourse.scala.error
Runner:3: error: ')' expected but integer literal found.
	for (j <- 1 t o 4) {
                        ^Runner:9: error: illegal start of simple expression
}
^