welcome.lessons.welcome.loopfor.LoopCourse.scala.code
for (i <- 1 to 10) {
	for (j <- 1 t o 4) {
		for (k <- 1 to 8) {
			avance()
		}
		gauche()
	}
}
